--- a/src/app/members/alertas/agregaralerta/agregaralerta.page.html
+++ b/src/app/members/alertas/agregaralerta/agregaralerta.page.html
@@ -27,7 +27,7 @@
                 <div class="form-row-group with-icons">
                     <div class="form-row no-padding">
                         <i class="fa fa-calendar"></i>
-                        <input type="date" id="fecha_alert" name="fecha_alert" class="form-element" required [value]="fecha_firma">
+                        <input type="date" style="width: 100%"  id="fecha_alert" name="fecha_alert" class="form-element" required [value]="fecha_firma">
                     </div>
                  
                 </div>
