--- a/src/app/members/alertas/editar/editar.page.html
+++ b/src/app/members/alertas/editar/editar.page.html
@@ -21,7 +21,7 @@
                 <div class="form-row-group with-icons">
                     <div class="form-row no-padding">
                         <i class="fa fa-calendar"></i>
-                        <input type="date" id="fecha_alert_edit" name="fecha_alert_edit" class="form-element" required [value]="fechaAlert">
+                        <input type="date" style="width: 100%" id="fecha_alert_edit" name="fecha_alert_edit" class="form-element" required [value]="fechaAlert">
                     </div>
                  
                 </div>
