--- a/src/app/members/poliza/poliza.page.html
+++ b/src/app/members/poliza/poliza.page.html
@@ -154,7 +154,7 @@
 				</section>
 		
 				<section class="container">
-						<h4 class="title-main mt-5 font-20 font-black font-bold">Garante</h4>
+						<h4 class="title-main mt-5 font-20 font-black font-bold">Fiador</h4>
 						<ul class="transaction-list list-unstyled">
 							<li *ngFor="let garante of garantes" class="radio20All">
 								<div class="align-items-center justify-content-between">
@@ -177,7 +177,7 @@
 									<div class=" align-items-center">
 							
 											<div class="ml-12">
-													<h5 class="coin-name font-black"><b class="font-redlgc">No hay Informacion Sobre Garantes.</b></h5>
+													<h5 class="coin-name font-black"><b class="font-redlgc">No hay Informacion Sobre Fiadores.</b></h5>
 											
 										
 											</div>	
