--- a/src/app/noticia/noticia.page.html
+++ b/src/app/noticia/noticia.page.html
@@ -33,7 +33,7 @@
                     
                 </div>
                 <div class="list-content font-redlgc font-12" >
-                    Autor: {{autor}} - {{fecha}}
+                    Autor: mundoinmobiliario.tv - {{fecha}}
                 </div>
             </div>
            
