--- a/src/app/solicitarcontrato/solicitarcontrato.page.html
+++ b/src/app/solicitarcontrato/solicitarcontrato.page.html
@@ -64,7 +64,7 @@
                     <div class="form-row-group with-icons">
                         <div class="form-row no-padding">
                             <i class="fa fa-calendar"></i>
-                            <input type="date" id="fecha_probable_con" name="fecha_probable" class="form-element" required placeholder="Fecha Probable de Firma (Opcional)" value="">
+                            <input type="date" style="width: 100%" id="fecha_probable_con" name="fecha_probable" class="form-element" required placeholder="Fecha Probable de Firma (Opcional)" value="">
                         </div>
                     </div>
                    
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="form-divider"></div>
-                    <div class="form-label-divider"><span class="back">Garante (Opcional)</span></div>
+                    <div class="form-label-divider"><span class="back">Fiador (Opcional)</span></div>
                     <div class="form-divider"></div>
                     <div class="form-row-group with-icons">
                         <div class="form-row no-padding">
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="form-divider"></div>
-                    <div class="form-label-divider"><span class="back">Tipo de Garante</span></div>
+                    <div class="form-label-divider"><span class="back">Tipo de Fiador</span></div>
                     <div class="form-divider"></div>
                     <div class="form-row-group ">
                         <div class="form-row no-padding">
