--- a/src/app/calcularproteccion/calcularproteccion.page.html
+++ b/src/app/calcularproteccion/calcularproteccion.page.html
@@ -32,13 +32,16 @@
                       <i class="fa fa-clock-o"></i>
                       <select id="vigencia_cal" class="form-element">
                         <option value="">Vigencia</option>
-                        <option value="2">Menor de 3 meses</option>
-                        <option value="3">3 meses</option>
-                        <option value="6">6 meses</option>
-                        <option value="12">12 meses</option>
-                        <option value="17">17 meses</option>
-                        <option value="21">21 meses</option>
-                        <option value="22">Mas de 21 meses</option>
+                        <option value="12">1 año</option>
+                        <option value="24">2 años</option>
+                        <option value="36">3 años</option>
+                        <option value="48">4 años</option>
+                        <option value="60">5 años</option>
+                        <option value="72">6 años</option>
+                        <option value="84">7 años</option>
+                        <option value="96">8 años</option>
+                        <option value="108">9 años</option>
+                        <option value="120">10 años</option>
                       </select>
                   </div>
                   <div class="form-row no-padding">
