arrelgados input date ios 1

--- a/src/app/members/alertas/agregaralerta/agregaralerta.page.html
+++ b/src/app/members/alertas/agregaralerta/agregaralerta.page.html
@@ -35,7 +35,7 @@
                 <div class="form-row-group with-icons">
                   <div class="form-row no-padding">
                           <i class="fa fa-clock-o"></i>
-                          <input type="time" id="hora_alert" name="hora_alert" class="form-element" required value="">
+                          <input type="time" id="hora_alert" name="hora_alert" class="form-element" required value="00:00">
                   </div>
                 </div>
              
