--- a/src/app/members/crearsolicitud/crearsolicitud.page.html
+++ b/src/app/members/crearsolicitud/crearsolicitud.page.html
@@ -64,7 +64,7 @@
                 <div class="form-row-group with-icons">
                     <div class="form-row no-padding">
                         <i class="fa fa-calendar"></i>
-                        <input type="date" style="width: 100%" id="fecha_probable_sol" name="fecha_probable" class="form-element" required placeholder="Fecha Probable de Firma (Opcional)" value="">
+                        <input type="date" style="width: 100%" id="fecha_probable_sol" name="fecha_probable" class="form-element" required [value]="fechaPro">
                     </div>
                 </div>
                
