--- a/src/app/calcularirs/calcularirs.page.html
+++ b/src/app/calcularirs/calcularirs.page.html
@@ -63,7 +63,7 @@
                
                 <div class="form-row no-padding">
                     <i class="fa fa-calendar"></i>
-                    <input style="width: 100%" type="date" id="fecha_venta_isr" name="fecha_venta" class="form-element" required placeholder="Fecha de Venta" value="">
+                    <input style="width: 100%"  type="date" id="fecha_venta_isr" name="fecha_venta" class="form-element" required  [value]="fechaVent">
                 </div>
              
                 <h4 class="title-main font-16 font-bold ">Precio Adjudicación</h4>
@@ -78,7 +78,7 @@
               
                 <div class="form-row no-padding">
                     <i class="fa fa-calendar"></i>
-                    <input type="date" style="width: 100%"  id="fecha_adjudicacion_isr" name="fecha_adjudicacion" class="form-element" required placeholder="dd/mm/aaaa" value="">
+                    <input type="date" style="width: 100%"  id="fecha_adjudicacion_isr" name="fecha_adjudicacion" class="form-element" required  [value]="fechaAdj">
                 </div>
             
                 <h4 class="title-main font-16 font-bold ">Numero de Propietarios</h4>
